# CatBot

./: .gitignore  CAPSTONE.md  CONTROLLER_CHEATSHEET.md  CONTROLLER_MAPPING.md  COURSE.md  HARDWARE.md  HARDWARE_ASSETS_PLACEHOLDER.md  INSTRUCTOR_GUIDE.md  LICENSE  PUBLISHING.md  README.md  SYLLABUS.md  TRADEMARK.md  components.md  ros_tf.yml  setup.md
catbot_2dnav/: CMakeLists.txt  package.xml
catbot_calibration/: CMakeLists.txt  package.xml
catbot_description/: CMakeLists.txt  package.xml
catbot_description/launch/: show_robot.launch  show_robot_xacro.launch
catbot_description/rviz/: catbot_ik_body.rviz  catbot_visualization.rviz  move_joints.rviz  show_model.rviz
catbot_description/urdf/: catbot.urdf  catbot_visualize_collision.urdf
catbot_description/weights_and_geometry/: Untitled.ipynb  robot_collision_and_inertia.ipynb  robot_kinematics.ipynb  robot_kinematics_DH_params_not_working.ipynb
catbot_description/weights_and_geometry/hrl_geom/: pose_converter.py  transformations.py
catbot_description/weights_and_geometry/pykdl_utils/: joint_kinematics.py  kdl_kinematics.py  kdl_parser.py
catbot_gazebo/: CMakeLists.txt  package.xml
catbot_lidar/: CMakeLists.txt  README.md  package.xml
catbot_msgs/: CMakeLists.txt  package.xml
catbot_pybullet/: CMakeLists.txt  package.xml
catbot_vision/: CMakeLists.txt  package.xml
catbot_visualization/: CMakeLists.txt  package.xml
gait_control/: CMakeLists.txt  package.xml
handouts/: LAB_01_Setup_and_URDF.md  LAB_02_Frames_and_Transforms.md  LAB_03_Transform_Composition.md  LAB_04_Forward_Kinematics.md  (+7 more)
(+234 files in other folders)
